Review 2 - contacts wrap fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -33,6 +33,9 @@
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
+}
+
+.contacts p {
   white-space: nowrap;
 }
 
